system/k8s/with_my_own_traefik/03_traefik.daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
 name: traefik-ingress-controller 
 labels:
   k8s-app: traefik-ingress-lb
   kubernetes.io/cluster-service: "true"
spec:
 selector:
   matchLabels:
      k8s-app: traefik-ingress-lb
 template:
   metadata:
     labels:
       k8s-app: traefik-ingress-lb
       name: traefik-ingress-lb
   spec:
     serviceAccountName: traefik-ingress-controller
     containers:
     - image: traefik:v2.2.1
       name: traefik-ingress-lb
       ports:
       - containerPort: 8080
         hostPort: 8080
         protocol: TCP
       - containerPort: 80
         hostPort: 80
         protocol: TCP
       - containerPort: 443
         hostPort: 443
         protocol: TCP

       resources:
         requests:
           cpu: 100m
           memory: 20Mi
       args:
       - --providers.kubernetescrd
       - --entrypoints.web.address=:80
       - --entrypoints.websecure.address=:443
       - --entrypoints.web.http.redirections.entryPoint.to=websecure
       - --entrypoints.web.http.redirections.entryPoint.scheme=https
       - --api.insecure
       - --certificatesresolvers.le.acme.email=example@example.com
       - --certificatesresolvers.le.acme.storage=/acme.json
       - --certificatesResolvers.le.acme.httpChallenge.entryPoint=web
