system/k8s/with_my_own_traefik/06_cweb.ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cweb-web-tls
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`leweb.k8s.dufour.io`) && PathPrefix(`/`)
    services:
    - name: cweb-service
      port: 8080
  tls:
    certResolver: le
